--- a/environments/py-3.10-win-64-dev.conda.lock.yml
+++ b/environments/py-3.10-win-64-dev.conda.lock.yml
@@ -40,7 +40,7 @@ dependencies:
   - comm=0.2.2=pyhd8ed1ab_1
   - contourpy=1.3.1=py310hc19bc0b_0
   - coverage=7.8.0=py310h38315fa_0
-  - cpython=3.10.16=py310hd8ed1ab_1
+  - cpython=3.10.16=py310hd8ed1ab_2
   - cycler=0.12.1=pyhd8ed1ab_1
   - cytoolz=1.0.1=py310ha8f682b_0
   - dask-core=2024.6.2=pyhd8ed1ab_0
@@ -55,7 +55,7 @@ dependencies:
   - exceptiongroup=1.2.2=pyhd8ed1ab_1
   - executing=2.1.0=pyhd8ed1ab_1
   - fasteners=0.19=pyhd8ed1ab_1
-  - fonttools=4.56.0=py310h38315fa_0
+  - fonttools=4.57.0=py310h38315fa_0
   - fqdn=1.5.1=pyhd8ed1ab_1
   - freetype=2.13.3=h0b5ce68_0
   - fsspec=2025.3.2=pyhd8ed1ab_0
@@ -85,7 +85,7 @@ dependencies:
   - jedi=0.19.2=pyhd8ed1ab_1
   - jinja2=3.1.6=pyhd8ed1ab_0
   - joblib=1.4.2=pyhd8ed1ab_1
-  - json5=0.10.0=pyhd8ed1ab_1
+  - json5=0.12.0=pyhd8ed1ab_0
   - jsonpointer=3.0.0=py310h5588dad_1
   - jsonschema=4.23.0=pyhd8ed1ab_1
   - jsonschema-specifications=2024.10.1=pyhd8ed1ab_1
@@ -114,7 +114,7 @@ dependencies:
   - libbrotlidec=1.1.0=h2466b09_2
   - libbrotlienc=1.1.0=h2466b09_2
   - libcblas=3.9.0=31_h5e41251_mkl
-  - libcurl=8.12.1=h88aaa65_0
+  - libcurl=8.13.0=h88aaa65_0
   - libdeflate=1.23=h9062f6e_0
   - libdlf=0.3.0=pyhd8ed1ab_1
   - libffi=3.4.6=h537db12_1
@@ -124,7 +124,7 @@ dependencies:
   - libiconv=1.18=h135ad9c_1
   - libjpeg-turbo=3.0.0=hcfcfb64_1
   - liblapack=3.9.0=31_h1aa476e_mkl
-  - liblzma=5.6.4=h2466b09_0
+  - liblzma=5.8.1=h2466b09_0
   - libpng=1.6.47=had7236b_0
   - libsodium=1.0.20=hc70643c_0
   - libsqlite=3.49.1=h67fdade_2
@@ -133,10 +133,10 @@ dependencies:
   - libwebp-base=1.5.0=h3b0e114_0
   - libwinpthread=12.0.0.r4.gg4f2fc60ca=h57928b3_9
   - libxcb=1.17.0=h0e4246c_0
-  - libxml2=2.13.7=he286e8c_0
+  - libxml2=2.14.0=had0eb51_0
   - libzlib=1.3.1=h2466b09_2
   - linkify-it-py=2.0.3=pyhd8ed1ab_1
-  - llvm-openmp=20.1.1=h30eaf37_1
+  - llvm-openmp=20.1.2=h30eaf37_0
   - locket=1.0.0=pyhd8ed1ab_0
   - markdown-it-py=2.2.0=pyhd8ed1ab_0
   - markupsafe=3.0.2=py310h38315fa_1
@@ -185,8 +185,8 @@ dependencies:
   - pybtex=0.24.0=pyhd8ed1ab_3
   - pybtex-docutils=1.0.3=py310h5588dad_2
   - pycparser=2.22=pyh29332c3_1
-  - pydantic=2.11.1=pyh3cfb1c2_0
-  - pydantic-core=2.33.0=py310h7c79e54_0
+  - pydantic=2.11.2=pyh3cfb1c2_0
+  - pydantic-core=2.33.1=py310h7c79e54_0
   - pydata-sphinx-theme=0.15.4=pyhd8ed1ab_0
   - pydiso=0.1.2=py310h8f92c26_0
   - pygments=2.19.1=pyhd8ed1ab_0
@@ -196,7 +196,7 @@ dependencies:
   - pysocks=1.7.1=pyh09c184e_7
   - pytest=8.3.5=pyhd8ed1ab_0
   - pytest-cov=6.0.0=pyhd8ed1ab_1
-  - python=3.10.16=h37870fc_1_cpython
+  - python=3.10.16=hfdde91d_2_cpython
   - python-dateutil=2.9.0.post0=pyhff2d567_1
   - python-fastjsonschema=2.21.1=pyhd8ed1ab_0
   - python-json-logger=2.0.7=pyhd8ed1ab_0
@@ -217,7 +217,7 @@ dependencies:
   - scikit-learn=1.4.2=py310hf2a6c47_1
   - scipy=1.14.1=py310hbd0dde3_2
   - send2trash=1.8.3=pyh5737063_1
-  - setuptools=75.8.2=pyhff2d567_0
+  - setuptools=78.1.0=pyhff2d567_0
   - six=1.17.0=pyhd8ed1ab_0
   - sniffio=1.3.1=pyhd8ed1ab_1
   - snowballstemmer=2.2.0=pyhd8ed1ab_0
@@ -289,11 +289,11 @@ dependencies:
   - zstandard=0.23.0=py310ha8f682b_1
   - zstd=1.5.7=hbeecb71_2
   - pip:
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@02f6fd3aa7530dc81fe2e32e7e2c874b429daaf7
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@117b245c90b38380e6b953368e5332bdfb4cbaad
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@a365076ef89082143a3a460df55e2db301af849c
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@c1797da5ca947c6f48555ea7f7680c0c63c1c456
-      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@6bf4ac8a7fc6c111216e8042a075f9e92ce38d41
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@fb08b8e877a84d0070cb0793acdf9833ea2c0143
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@6298fedb4b2461f7a28686318569aa37bfd3b7ef
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@ad5b2c663795d29216d127679ee121fb13a4d78b
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@0eb56555b350bbe4cabc51de2dbb2ee982f46822
+      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@60144cba8e10e4794d63997e1982d4b5a9af943e
 
 variables:
   KMP_WARNINGS: 0
