--- a/environments/py-3.11-linux-64.conda.lock.yml
+++ b/environments/py-3.11-linux-64.conda.lock.yml
@@ -31,7 +31,7 @@ dependencies:
   - discretize=0.11.2=py311h5b7b71f_1
   - distributed=2024.6.2=pyhd8ed1ab_0
   - fasteners=0.19=pyhd8ed1ab_1
-  - fonttools=4.56.0=py311h2dc5d0c_0
+  - fonttools=4.57.0=py311h2dc5d0c_0
   - freetype=2.13.3=h48d6fc4_0
   - fsspec=2025.3.2=pyhd8ed1ab_0
   - geoana=0.7.2=py311h5b7b71f_0
@@ -40,6 +40,7 @@ dependencies:
   - hdf5=1.14.3=nompi_h2d575fe_109
   - hpack=4.1.0=pyhd8ed1ab_0
   - hyperframe=6.1.0=pyhd8ed1ab_0
+  - icu=75.1=he02047a_0
   - importlib-metadata=8.6.1=pyha770c72_0
   - importlib_metadata=8.6.1=hd8ed1ab_0
   - jinja2=3.1.6=pyhd8ed1ab_0
@@ -56,7 +57,7 @@ dependencies:
   - libbrotlidec=1.1.0=hb9d3cd8_2
   - libbrotlienc=1.1.0=hb9d3cd8_2
   - libcblas=3.9.0=31_h372d94f_mkl
-  - libcurl=8.12.1=h332b0f4_0
+  - libcurl=8.13.0=h332b0f4_0
   - libdeflate=1.23=h4ddbbb0_0
   - libdlf=0.3.0=pyhd8ed1ab_1
   - libedit=3.1.20250104=pl5321h7949ede_0
@@ -71,7 +72,7 @@ dependencies:
   - libiconv=1.18=h4ce23a2_1
   - libjpeg-turbo=3.0.0=hd590300_1
   - liblapack=3.9.0=31_hc41d3b0_mkl
-  - liblzma=5.6.4=hb9d3cd8_0
+  - liblzma=5.8.1=hb9d3cd8_0
   - libnghttp2=1.64.0=h161d5f1_0
   - libnsl=2.0.1=hd590300_0
   - libpng=1.6.47=h943b412_0
@@ -85,9 +86,9 @@ dependencies:
   - libwebp-base=1.5.0=h851e524_0
   - libxcb=1.17.0=h8a09558_0
   - libxcrypt=4.4.36=hd590300_1
-  - libxml2=2.13.7=h0d44e9d_0
+  - libxml2=2.14.0=h8d12d68_0
   - libzlib=1.3.1=hb9d3cd8_2
-  - llvm-openmp=20.1.1=h024ca30_1
+  - llvm-openmp=20.1.2=h024ca30_0
   - locket=1.0.0=pyhd8ed1ab_0
   - markupsafe=3.0.2=py311h2dc5d0c_1
   - matplotlib-base=3.8.4=py311ha4ca890_2
@@ -110,8 +111,8 @@ dependencies:
   - psutil=7.0.0=py311h9ecbd09_0
   - pthread-stubs=0.4=hb9d3cd8_1002
   - pycparser=2.22=pyh29332c3_1
-  - pydantic=2.11.1=pyh3cfb1c2_0
-  - pydantic-core=2.33.0=py311h687327b_0
+  - pydantic=2.11.2=pyh3cfb1c2_0
+  - pydantic-core=2.33.1=py311h687327b_0
   - pydiso=0.1.2=py311h19ea254_0
   - pymatsolver=0.3.1=pyh48887ae_201
   - pyparsing=3.2.3=pyhd8ed1ab_1
@@ -126,7 +127,7 @@ dependencies:
   - readline=8.2=h8c095d6_2
   - scikit-learn=1.4.2=py311he08f58d_1
   - scipy=1.14.1=py311he9a78e4_2
-  - setuptools=75.8.2=pyhff2d567_0
+  - setuptools=78.1.0=pyhff2d567_0
   - six=1.17.0=pyhd8ed1ab_0
   - sortedcontainers=2.4.0=pyhd8ed1ab_1
   - tbb=2021.13.0=hceb3a55_1
@@ -154,11 +155,11 @@ dependencies:
   - zstandard=0.23.0=py311h9ecbd09_1
   - zstd=1.5.7=hb8e6e7a_2
   - pip:
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@02f6fd3aa7530dc81fe2e32e7e2c874b429daaf7
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@117b245c90b38380e6b953368e5332bdfb4cbaad
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@a365076ef89082143a3a460df55e2db301af849c
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@c1797da5ca947c6f48555ea7f7680c0c63c1c456
-      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@6bf4ac8a7fc6c111216e8042a075f9e92ce38d41
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@fb08b8e877a84d0070cb0793acdf9833ea2c0143
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@6298fedb4b2461f7a28686318569aa37bfd3b7ef
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@ad5b2c663795d29216d127679ee121fb13a4d78b
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@0eb56555b350bbe4cabc51de2dbb2ee982f46822
+      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@60144cba8e10e4794d63997e1982d4b5a9af943e
 
 variables:
   KMP_WARNINGS: 0
