--- a/environments/py-3.12-win-64.conda.lock.yml
+++ b/environments/py-3.12-win-64.conda.lock.yml
@@ -30,7 +30,7 @@ dependencies:
   - discretize=0.11.2=py312hbaa7e33_1
   - distributed=2024.6.2=pyhd8ed1ab_0
   - fasteners=0.19=pyhd8ed1ab_1
-  - fonttools=4.56.0=py312h31fea79_0
+  - fonttools=4.57.0=py312h31fea79_0
   - freetype=2.13.3=h0b5ce68_0
   - fsspec=2025.3.2=pyhd8ed1ab_0
   - geoana=0.7.2=py312hbaa7e33_0
@@ -54,7 +54,7 @@ dependencies:
   - libbrotlidec=1.1.0=h2466b09_2
   - libbrotlienc=1.1.0=h2466b09_2
   - libcblas=3.9.0=31_h5e41251_mkl
-  - libcurl=8.12.1=h88aaa65_0
+  - libcurl=8.13.0=h88aaa65_0
   - libdeflate=1.23=h9062f6e_0
   - libdlf=0.3.0=pyhd8ed1ab_1
   - libexpat=2.7.0=he0c23c2_0
@@ -65,7 +65,7 @@ dependencies:
   - libiconv=1.18=h135ad9c_1
   - libjpeg-turbo=3.0.0=hcfcfb64_1
   - liblapack=3.9.0=31_h1aa476e_mkl
-  - liblzma=5.6.4=h2466b09_0
+  - liblzma=5.8.1=h2466b09_0
   - libpng=1.6.47=had7236b_0
   - libsqlite=3.49.1=h67fdade_2
   - libssh2=1.11.1=he619c9f_0
@@ -73,9 +73,9 @@ dependencies:
   - libwebp-base=1.5.0=h3b0e114_0
   - libwinpthread=12.0.0.r4.gg4f2fc60ca=h57928b3_9
   - libxcb=1.17.0=h0e4246c_0
-  - libxml2=2.13.7=he286e8c_0
+  - libxml2=2.14.0=had0eb51_0
   - libzlib=1.3.1=h2466b09_2
-  - llvm-openmp=20.1.1=h30eaf37_1
+  - llvm-openmp=20.1.2=h30eaf37_0
   - locket=1.0.0=pyhd8ed1ab_0
   - markupsafe=3.0.2=py312h31fea79_1
   - matplotlib-base=3.8.4=py312hfee7060_2
@@ -95,8 +95,8 @@ dependencies:
   - psutil=7.0.0=py312h4389bb4_0
   - pthread-stubs=0.4=h0e40799_1002
   - pycparser=2.22=pyh29332c3_1
-  - pydantic=2.11.1=pyh3cfb1c2_0
-  - pydantic-core=2.33.0=py312hfe1d9c4_0
+  - pydantic=2.11.2=pyh3cfb1c2_0
+  - pydantic-core=2.33.1=py312hfe1d9c4_0
   - pydiso=0.1.2=py312h01acb21_0
   - pymatsolver=0.3.1=pyh48887ae_201
   - pyparsing=3.2.3=pyhd8ed1ab_1
@@ -110,7 +110,7 @@ dependencies:
   - pyyaml=6.0.2=py312h31fea79_2
   - scikit-learn=1.4.2=py312h816cc57_1
   - scipy=1.14.1=py312h337df96_2
-  - setuptools=75.8.2=pyhff2d567_0
+  - setuptools=78.1.0=pyhff2d567_0
   - six=1.17.0=pyhd8ed1ab_0
   - sortedcontainers=2.4.0=pyhd8ed1ab_1
   - tbb=2021.13.0=h62715c5_1
@@ -143,11 +143,11 @@ dependencies:
   - zstandard=0.23.0=py312h4389bb4_1
   - zstd=1.5.7=hbeecb71_2
   - pip:
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@02f6fd3aa7530dc81fe2e32e7e2c874b429daaf7
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@117b245c90b38380e6b953368e5332bdfb4cbaad
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@a365076ef89082143a3a460df55e2db301af849c
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@c1797da5ca947c6f48555ea7f7680c0c63c1c456
-      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@6bf4ac8a7fc6c111216e8042a075f9e92ce38d41
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@fb08b8e877a84d0070cb0793acdf9833ea2c0143
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@6298fedb4b2461f7a28686318569aa37bfd3b7ef
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@ad5b2c663795d29216d127679ee121fb13a4d78b
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@0eb56555b350bbe4cabc51de2dbb2ee982f46822
+      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@60144cba8e10e4794d63997e1982d4b5a9af943e
 
 variables:
   KMP_WARNINGS: 0
