--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,9 +30,9 @@ include = [
 [tool.poetry.dependencies]
 python = "^3.10"
 
-dask-core = {version = "2025.3.*"}  # also in simpeg[dask]
+dask-core = "2025.3.*"  # also in simpeg[dask]
 discretize = "0.11.*"  # also in simpeg, octree-creation-app
-distributed = "2025.3.*"  # because conda-lock doesn't take dask extras into account
+distributed = "2025.3.*"  # conda needs explicit dask-core etc for equivalent dask[distributed]
 numpy = "~1.26.0" # also in geoh5py, simpeg
 pydantic = "^2.5.2"  # also in geoh5py, curve-apps, geoapps-utils
 scikit-learn = "~1.4.0"
