--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,7 +84,7 @@ geoapps-utils = {version = ">=0.5.0a3, <0.6.dev", source = "pypi", allow-prerele
 #geoapps-utils = {git = "https://github.com/MiraGeoscience/geoapps-utils.git", rev = "release/0.5.0"}
 
 mira-simpeg = {version = ">=0.23.0.1a3, <0.23.1.dev", source="pypi", allow-prereleases = true, extras = ["dask"]}
-#mira-simpeg = {git = "https://github.com/MiraGeoscience/simpeg.git", rev = "GEOPY-2137", extras = ["dask"]}
+#mira-simpeg = {git = "https://github.com/MiraGeoscience/simpeg.git", rev = "release/0.23.0.1", extras = ["dask"]}
 
 param-sweeps = {version = ">=0.2.1a1, <0.3.dev", source = "pypi", allow-prereleases = true}
 #param-sweeps = {git = "https://github.com/MiraGeoscience/param-sweeps.git", rev = "release/0.2.1"}
